@@ -49,10 +49,11 @@ diff $srcdir/euptexdir/tests/free_pena.log eup-free_pena.out || exit 5
 $LN_S $srcdir/euptexdir/tests/inhibitglue.tex ./eup-inhibitglue.tex
 $_euptex -fmt=eup-basic -interaction=batchmode eup-inhibitglue.tex || :
 
-$_updvitype ./eup-inhibitglue.dvi >euptests/xeup-inhibitglue.typ
-sed "1d;s/TeX output 20[23].\...\...:.*'/TeX output 20XX.XX.XX'/" euptests/xeup-inhibitglue.typ >euptests/xeup-inhibitgluea.typ
-diff $srcdir/euptexdir/tests/eup-inhibitgluea.typ euptests/xeup-inhibitgluea.typ || exit 7
-
+if test -f $_updvitype; then
+  $_updvitype ./eup-inhibitglue.dvi >euptests/xeup-inhibitglue.typ
+  sed "1d;s/TeX output 20[23].\...\...:.*'/TeX output 20XX.XX.XX'/" euptests/xeup-inhibitglue.typ >euptests/xeup-inhibitgluea.typ
+  diff $srcdir/euptexdir/tests/eup-inhibitgluea.typ euptests/xeup-inhibitgluea.typ || exit 7
+fi
 
 # kinsoku_table.tex, kinsoku_search.tex
 $LN_S $srcdir/euptexdir/tests/kinsoku_table.tex ./eup-kinsoku_table.tex
